// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchEditorCard snapshot snapshot: SwitchEditorCard 1`] = `
<Card
  className="border border-light-700 shadow-none"
>
  <BaseModal
    bodyStyle={null}
    close={[Function]}
    confirmAction={
      <Button
        className={null}
        onClick={[Function]}
        text={null}
        variant="primary"
      >
        <FormattedMessage />
      </Button>
    }
    footerAction={null}
    headerComponent={null}
    hideCancelButton={false}
    isFullscreenScroll={true}
    isOpen={false}
    size="md"
    title={<FormattedMessage />}
  >
    <FormattedMessage />
  </BaseModal>
  <Button
    className="my-3 ml-2 py-0"
    onClick={[Function]}
    size="sm"
    text={null}
    variant="link"
  >
    <FormattedMessage />
  </Button>
</Card>
`;

exports[`SwitchEditorCard snapshot snapshot: SwitchEditorCard returns null for advanced problems 1`] = `null`;

exports[`SwitchEditorCard snapshot snapshot: SwitchEditorCard returns null when editor is Markdown 1`] = `
<Card
  className="border border-light-700 shadow-none"
>
  <BaseModal
    bodyStyle={null}
    close={[Function]}
    confirmAction={
      <Button
        className={null}
        onClick={[Function]}
        text={null}
        variant="primary"
      >
        <FormattedMessage
          defaultMessage="Switch to markdown editor"
          description="message to confirm that a user wants to use the markdown editor"
          id="authoring.problemeditor.settings.switchtoeditor.ConfirmSwitchButtonLabel.markdown"
        />
      </Button>
    }
    footerAction={null}
    headerComponent={null}
    hideCancelButton={false}
    isFullscreenScroll={true}
    isOpen={false}
    size="md"
    title={
      <FormattedMessage
        defaultMessage="Convert to Markdown?"
        description="message to confirm that a user wants to use the markdown editor"
        id="authoring.problemeditor.settings.switchtoeditor.ConfirmSwitchMessageTitle.markdown"
      />
    }
  >
    <FormattedMessage
      defaultMessage="If you use the markdown editor, this problem will be converted to markdown and you will not be able to return to the simple editor."
      description="message to confirm that a user wants to use the advanced editor"
      id="authoring.problemeditor.settings.switchtoeditor.ConfirmSwitchMessage.markdown"
    />
  </BaseModal>
  <Button
    className="my-3 ml-2 py-0"
    onClick={[Function]}
    size="sm"
    text={null}
    variant="link"
  >
    <FormattedMessage
      defaultMessage="Switch to markdown editor"
      description="button to switch to the markdown editor"
      id="authoring.problemeditor.settings.switchtoeditor.label.markdown"
    />
  </Button>
</Card>
`;
